# M.Sc-Computer-Architecture

./: README.md
Advanced Computer Architecture/: README.md
Advanced Computer Architecture/Useful Documents/: README.md
Advanced VLSI/: README.md
Deep Learning/: README.md
Deep Learning/Others/: Neural Network.txt
Dependable System Design/Asignment Report Template/: main.tex
Dependable System Design/Booklet/: README.txt
Dependable System Design/Research/: PaperDigest.docx
Embedded Systems Modeling and Design/: README.md
Memory Technologies/: README.md
Memory Technologies/Notes/: MemTech-Lec1.pptx  MemTech-Lec2.pptx  MemTech-Lec3.pptx  MemTech-Lec5.pptx  MemTech-Lec6.pptx  MemTech-Lec7.pptx
Network Device Architecture/Fall 2023/: films.txt
Network Device Architecture/Fall 2024/Project/AoND-S1-1403-1404-Project#02/Codes/: CMakeLists.txt  README.md  config.h.in
Network Device Architecture/Fall 2024/Project/AoND-S1-1403-1404-Project#02/Codes/src/: CMakeLists.txt  main.c  matching.c  matching.h  permutation.c  permutation.h  switch-apsara.c  switch.c  switch.h  test_gnuplot.c
Operating Systems/: README.md
Reconfigurable Computing System/Slides/: 02_history-and-industry.pptx  03_1_FPLD_LC.pptx
Reconfigurable-Computing-System/: README.txt
Reconfigurable-Computing-System/Slides/: .~lock.08_1_3_TM_Algs2.pptx#  .~lock.08_2_Placement_Algs.pptx#  03_2_FPLD_prog.pptx  03_3_FPLD_connections.pptx  03_4_FPLD_methodology.pptx  03_5_granularity.pptx  03_6_2-Cyclone-Stratix.pptx  03_6_3-Spartan-Virtex.pptx  05-1_integration.pptx  (+7 more)
Seminar/: README.md
(+4890 files in other folders)
